@@ -4,5 +4,9 @@ domain-py-smart_reference
 .. py:class:: Name
    :module: foo
 
+   :param name: blah blah
+   :type name: foo.Name
+   :param age: blah blah
+   :type age: foo.Age
 
 .. py:function:: hello(name: foo.Name, age: foo.Age)
