@@ -44,6 +44,8 @@ Features added
 * #9176: i18n: Emit a debug message if message catalog file not found under
   :confval:`locale_dirs`
 * #1874: py domain: Support union types using ``|`` in info-field-list
+* #9268: py domain: :confval:`python_use_unqualified_type_names` supports type
+  field in info-field-list
 * #9097: Optimize the paralell build
 * #9131: Add :confval:`nitpick_ignore_regex` to ignore nitpicky warnings using
   regular expressions
